@@ -1,5 +1,11 @@
 2016-01-22 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/gen.c,
+	  src/z80/peep.c:
+	  Make estimate for preserved regs on function pointers less conservative.
+
+2016-01-22 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/peep.c:
 	  More accurate handling of conditional jumps, handle ex (sp), ix and ex (sp), iy.
 
